<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Update"
    android:background="#CEF0FF">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#83E0F6"
            android:padding="12dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:background="#07B8D6"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_kode"/>

                    <EditText
                        android:layout_margin="2dp"
                        android:backgroundTint="#83E0F6"
                        android:id="@+id/newEdKodebrg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ht_kode"
                        android:textColor="@color/white"
                        android:textColorHint="#C9048CA3"
                        android:inputType="text"
                        android:autofillHints=""/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:background="#07B8D6"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_nama"/>

                    <EditText
                        android:layout_margin="2dp"
                        android:backgroundTint="#83E0F6"
                        android:id="@+id/newEdNamebrg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ht_nama"
                        android:textColor="@color/white"
                        android:textColorHint="#C9048CA3"
                        android:inputType="textPersonName"
                        android:autofillHints=""/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:background="#07B8D6"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_jml"/>

                    <EditText
                        android:layout_margin="2dp"
                        android:backgroundTint="#83E0F6"
                        android:id="@+id/newEdJmlbrg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ht_jml"
                        android:textColor="@color/white"
                        android:textColorHint="#C9048CA3"
                        android:inputType="number"
                        android:autofillHints=""/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:layout_margin="4dp"
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_save"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:backgroundTint="#07D320"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6C4236"
        android:minHeight="?android:attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/toolBar_update"
            android:textColor="#CEF0FF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_back2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:text="@string/none" />


    </androidx.appcompat.widget.Toolbar>

</RelativeLayout>